refactor markup of ProjectCard component and update styles for Project and ProjectCard

--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,76 +1,92 @@
-.projectCard {
+.card {
+  height: 100%;
+  border: 1px solid #eeebeb;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  transition:
+    box-shadow 250ms ease,
+    transform 250ms ease-in-out;
+  overflow: hidden;
+}
+
+.figure {
   display: flex;
   flex-direction: column;
   height: 100%;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  transition: box-shadow 250ms ease, transform 300ms ease-in-out;
+  margin: 0;
 }
 
 .imageWrapper {
+  position: relative;
   overflow: hidden;
-  aspect-ratio: 16 / 9;
+  padding-bottom: calc(9 / 16 * 100%);
 }
 
-.projectImage {
-  /* width: 100%; */
-  min-width: 100%;
-  min-height: 100%;
-  background-size: cover;
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top left;
   transition: transform 500ms ease-in-out;
 }
 
-.projectDetails {
+.details {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 0.5rem;
+  padding: 0.75rem 0.5rem;
 }
 
-.projectTitle {
-  font-size: var(--fs-md);
-  margin-bottom: 0.5rem;
+.title {
   font-family: var(--ff-headings);
+  font-weight: var(--fw-semi-bold);
+  font-size: var(--fs-lg);
+  color: var(--clr-midnight-blue);
+  margin-bottom: 0.5rem;
 }
 
-.projectDescription {
-  font-size: 0.875rem;
-  margin-bottom: 16px;
+.description {
+  font-size: var(--fs-sm);
   line-height: 1.5;
+  color: var(--clr-darkish-gray);
+  margin-bottom: 1rem;
 }
 
-.projectButton {
+.button {
   text-decoration: none;
   align-self: start;
-  padding: 8px 16px;
-  background-color: var(--clr-midnight-blue);
-  background-color: var(--clr-dark);
-  color: var(--clr-turquoise);
-  color: pink;
+  padding: 0.75em 1em;
+  background-color: var(--clr-dark-gray);
+  font-size: var(--fs-xs);
+  color: var(--clr-white);
   margin-top: auto;
-  /* color: var(--clr-lavender); */
   border: none;
-  border-radius: 0.25rem;
+  border-radius: 0.375em;
   cursor: pointer;
-  transition: background-color 300ms ease;
-}
-
-.projectButton:focus {
-  background-color: var(--clr-dark);
-  outline-offset: 3px;
+  transition:
+    background-color 250ms ease,
+    color 250ms ease;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .projectCard:hover {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: translateY(-8px);
+  .card:hover {
+    transform: translateY(-4px);
   }
 
-  .projectImage:hover {
+  .card:hover .image {
     transform: scale(1.05);
   }
 
-  .projectButton:hover {
+  .button:hover {
     background-color: var(--clr-dark);
+    color: pink;
   }
+}
+
+.button:focus {
+  background-color: var(--clr-dark);
+  outline-offset: 3px;
 }
