--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   background-color: var(--clr-white);
   z-index: var(--z-index-header);
 }
