--- a/src/components/NavMobile/NavMobile.module.css
+++ b/src/components/NavMobile/NavMobile.module.css
@@ -1,48 +1,4 @@
-.gradientBackground {
-  background-image: radial-gradient(
-    rgba(255, 255, 255, 0.5) 5%,
-    transparent 5%
-  );
-  background-size: 5rem 5rem;
-  background-position: 0 calc(var(--hovered-index) * -15%);
-  position: absolute;
-  inset: 0;
-  z-index: var(--z-index-default);
-  transition:
-    background-size 400ms ease-in-out,
-    background-position 400ms ease-in-out;
-}
-
-.nav {
-  --index: 0;
-  position: relative;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  z-index: var(--z-index-foreground);
-}
-
-.navList {
-  padding: 3rem;
-  z-index: var(--z-index-foreground);
-}
-
-.navItem {
-  padding: 1rem;
-  opacity: 0;
-  transform: translateX(100px);
-  transition:
-    transform 250ms ease-in,
-    opacity 250ms ease-in;
-  transition-delay: calc(var(--anim-duration) + (var(--index) - 2.5) * 100ms);
-}
-
-.navList:hover ~ .gradientBackground {
-  background-size: 4.5rem 4.5rem;
-}
-
 .sidebar {
-  --width: min(20rem, 100%);
   --anim-duration: 300ms;
 
   position: fixed;
@@ -50,12 +6,10 @@
   background-color: var(--clr-dark);
   gap: 0;
   top: 0;
-  bottom: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  right: calc(-1 * var(--width));
-  text-align: start;
-  width: var(--width);
+  height: 100dvh;
+  right: -100%;
+  width: 100%;
+  overflow: hidden;
   transition: right var(--anim-duration) ease-in-out;
 }
 
@@ -68,29 +22,78 @@
   transform: translateX(0);
 }
 
-.sidebar li {
-  margin: 16px 0;
+.sidebarContent {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.nav {
+  --index: 0;
+  position: relative;
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  z-index: var(--z-index-foreground);
+}
+
+.navList {
+  padding-left: 1.5rem;
+  margin: 5rem 0;
+  z-index: var(--z-index-foreground);
+}
+
+.navList:hover ~ .gradientBackground {
+  background-size: 4.5rem 4.5rem;
+}
+
+.navItem {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: transform 250ms ease-in;
+  transition-delay: calc(var(--anim-duration) + (var(--index) - 2.5) * 100ms);
+}
+
+.navItem + .navItem {
+  padding-top: 2rem;
 }
 
 .itemLink {
   font-family: var(--ff-headings);
   font-weight: var(--fw-semi-bold);
-  color: var(--clr-turquoise);
+  font-size: var(--fs-xxl);
   color: var(--clr-lavender);
-  font-size: var(--fs-xl);
   text-decoration: none;
+  opacity: 0.7;
+  transition: opacity 250ms ease-in-out;
 }
 
 .itemLink.active {
   text-decoration: underline;
+  text-underline-offset: 6px;
 }
 
-.nav:hover .itemLink {
-  opacity: 0.5;
-}
-
-.nav:hover .itemLink:hover {
+.itemLink:hover {
   opacity: 1;
+}
+
+.itemLink:active {
+  opacity: 1;
+  transition: opacity 100ms ease-in-out;
+}
+
+.gradientBackground {
+  background-image: radial-gradient(
+    rgba(255, 255, 255, 0.2) 5%,
+    transparent 5%
+  );
+  background-size: 5rem 5rem;
+  background-position: 0 calc(var(--hovered-index) * -15%);
+  position: absolute;
+  inset: 0;
+  z-index: var(--z-index-default);
+  transition:
+    background-size 400ms ease-in-out,
+    background-position 400ms ease-in-out;
 }
 
 .openButton,
@@ -105,32 +108,87 @@
 }
 
 .openButton {
-  font-size: var(--fs-lg);
+  font-size: 2rem;
   color: var(--clr-dark);
 }
 
 .closeButton {
   position: absolute;
-  top: 1rem;
-  left: 1rem;
-  font-size: var(--fs-xl);
-  color: rgb(220, 225, 232);
+  top: 2rem;
+  left: 1.5rem;
+  font-size: 2.5rem;
   color: var(--clr-lavender);
-  border: 2px solid transparent;
   border-radius: 50%;
+  opacity: 0.7;
   z-index: var(--z-index-overlay);
   transition:
     transform 150ms ease-in-out,
-    border-color 150ms ease-in-out;
+    opacity 250ms ease-in-out;
 }
 
-.closeButton:active {
-  transform: scale(0.8);
+.closeButton::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  border: 2px solid transparent;
+  border-radius: 50%;
+  transition: border-color 150ms ease-in-out;
 }
 
 @media (hover: hover) and (pointer: fine) {
   .closeButton:hover {
-    border: 2px solid currentColor;
+    opacity: 1;
+  }
+
+  .closeButton:hover::before {
+    border-color: currentColor;
+  }
+}
+
+.closeButton:active {
+  transform: scale(0.8);
+  top: 1.5rem;
+  left: 1rem;
+  padding: 0.5rem;
+  opacity: 1;
+  transition:
+    opacity 100ms ease-in-out,
+    transform 150ms ease-in-out;
+}
+
+.closeButton:active::before {
+  transform: translate(-50%, -50%) scale(0.8);
+}
+
+@media screen and (min-width: 20rem) {
+  .navList {
+    padding-left: 2.5rem;
+  }
+
+  .closeButton {
+    left: 2.5rem;
+  }
+
+  .closeButton:active {
+    left: 2rem;
+  }
+}
+
+@media screen and (min-width: 30rem) {
+  .navList {
+    padding-left: 3rem;
+  }
+
+  .closeButton {
+    left: 3rem;
+  }
+
+  .closeButton:active {
+    left: 2.5rem;
   }
 }
 
