--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -6,6 +6,8 @@
   font-family: var(--ff-text);
   font-weight: var(--fw-regular);
   font-size: var(--fs-sm);
+  line-height: 1.5;
+  text-wrap: pretty;
   color: var(--clr-darkish-gray);
   margin-top: 1.25em;
   max-width: 60rem;
