--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -9,6 +9,14 @@
   overflow: hidden;
 }
 
+.card:hover {
+  transform: translateY(-4px);
+}
+
+.card:hover .image {
+  transform: scale(1.05);
+}
+
 .figure {
   display: flex;
   flex-direction: column;
@@ -37,20 +45,22 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 0.75rem 0.5rem;
+  padding: 0.75rem;
 }
 
 .title {
   font-family: var(--ff-headings);
-  font-weight: var(--fw-semi-bold);
+  font-weight: var(--fw-bold);
   font-size: var(--fs-lg);
   color: var(--clr-midnight-blue);
   margin-bottom: 0.5rem;
 }
 
 .description {
-  font-size: var(--fs-sm);
+  font-family: var(--ff-text);
+  font-size: var(--fs-xs);
   line-height: 1.5;
+  text-wrap: pretty;
   color: var(--clr-darkish-gray);
   margin-bottom: 1rem;
 }
@@ -58,13 +68,13 @@
 .button {
   text-decoration: none;
   align-self: start;
-  padding: 0.75em 1em;
+  padding: 0.6875em 1.125em;
   background-color: var(--clr-dark-gray);
   font-size: var(--fs-xs);
   color: var(--clr-white);
   margin-top: auto;
   border: none;
-  border-radius: 0.375em;
+  border-radius: 0.5em;
   cursor: pointer;
   transition:
     background-color 250ms ease,
@@ -72,14 +82,6 @@
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    transform: translateY(-4px);
-  }
-
-  .card:hover .image {
-    transform: scale(1.05);
-  }
-
   .button:hover {
     background-color: var(--clr-dark);
     color: pink;
