--- a/src/components/ProjectHeader/ProjectHeader.module.css
+++ b/src/components/ProjectHeader/ProjectHeader.module.css
@@ -15,5 +15,6 @@
   font-family: var(--ff-text);
   font-weight: var(--fw-regular);
   font-size: var(--fs-sm);
-  color: var(--clr-dark-gray);
+  color: var(--clr-darkish-gray);
+  margin-top: 0.25rem;
 }
