--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -10,10 +10,10 @@
   bottom: 50%;
   left: 50%;
   transform: translateX(-50%);
+  font-size: var(--fs-xs);
+  color: var(--clr-white);
   padding: 0.5rem;
   background-color: var(--color);
-  color: var(--clr-white);
-  font-size: var(--fs-xs);
   border-radius: 0.5rem;
   opacity: 0;
   transition: opacity 250ms ease;
@@ -43,11 +43,11 @@
 .heading {
   display: flex;
   align-items: center;
-  gap: 0.125rem;
+  gap: 0.25rem;
   font-family: var(--ff-text);
   font-weight: var(--fw-light);
   font-size: var(--fs-xxs);
-  color: var(--clr-green)
+  color: var(--clr-green);
 }
 
 .circle {
