--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
   --clr-turquoise: #34daef;
   --clr-yellow: #c3ec50;
   --clr-purple: #ae75db;
+  --clr-dark-purple: #815c7f;
   --clr-dark: #161615;
   --clr-lavender: #f3e4ff;
   --clr-electric-blue: #1700fe;
