--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -50,7 +50,7 @@
 
 .title {
   font-family: var(--ff-headings);
-  font-weight: var(--fw-bold);
+  font-weight: var(--fw-semi-bold);
   font-size: var(--fs-lg);
   color: var(--clr-midnight-blue);
   margin-bottom: 0.5rem;
