--- a/src/components/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/ProjectInfo/ProjectInfo.module.css
@@ -7,7 +7,7 @@
 
 .title {
   font-family: var(--ff-headings);
-  font-weight: var(--fw-bold);
+  font-weight: var(--fw-semi-bold);
   font-size: var(--fs-sm);
   color: var(--clr-midnight-blue);
   margin-bottom: 0.5rem;
