apply small CSS changes and format all files with Prettier

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: clamp(2rem, 2rem + 3.3333vw, 5rem);
+  margin-top: var(--section-gap);
   background-color: var(--clr-dark);
 }
 
