--- a/src/styles/ProjectPage.module.css
+++ b/src/styles/ProjectPage.module.css
@@ -22,8 +22,26 @@ figure.figureContainer,
   margin-top: 2rem;
 }
 
-.figure {
+.videoWrapper {
   margin: 2rem 0 0 0;
+  position: relative;
+  padding-bottom: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.picture {
+  padding: 0;
+  margin: 0;
 }
 
 .image {
@@ -70,6 +88,10 @@ div.grid {
 }
 
 @media screen and (min-width: 48rem) {
+  .videoWrapper {
+    padding-bottom: 75%;
+  }
+
   .grid {
     grid-template-columns: 1fr 1fr;
     gap: 1.75rem;
@@ -77,6 +99,10 @@ div.grid {
 }
 
 @media screen and (min-width: 60rem) {
+  .videoWrapper {
+    padding-bottom: 56.25%;
+  }
+
   .grid {
     gap: 2rem;
   }
