--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -27,7 +27,7 @@
 .imageWrapper {
   position: relative;
   overflow: hidden;
-  padding-bottom: calc(9 / 16 * 100%);
+  padding-bottom: 56.25%;
 }
 
 .image {
@@ -62,7 +62,7 @@
   line-height: 1.5;
   text-wrap: pretty;
   color: var(--clr-darkish-gray);
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .button {
