--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,6 +41,8 @@
   --z-index-overlay: 2;
   --z-index-header: 10;
   --z-index-menu: 100;
+
+  --section-gap: clamp(2rem, 2rem + 4.4444vw, 6rem);
 }
 
 html {
