--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,3 +1,13 @@
+.wrapper {
+  position: relative;
+  display: inline-block;
+  width: fit-content;
+  background-color: var(--clr-dark);
+  z-index: var(--z-index-default);
+  border-radius: 50vw;
+  transition: transform 250ms ease-in;
+}
+
 .button {
   position: relative;
   display: inline-block;
@@ -7,11 +17,10 @@
   text-decoration: none;
   padding: 0.75em 1.5em;
   border: none;
-  border-radius: 0.75rem;
+  border-radius: inherit;
   background-color: transparent;
   color: var(--clr-white);
   cursor: pointer;
-  transition: transform 250ms ease-in;
   outline-offset: 4px;
 }
 
@@ -44,15 +53,15 @@
   transition: background-color 300ms ease;
 }
 
-.button:hover {
+.wrapper:hover {
   transform: scale(0.95);
 }
 
-.button:hover::before {
+.wrapper:hover .button::before {
   --clr-border: var(--clr-dark-gray);
 }
 
-.button:hover::after {
+.wrapper:hover .button::after {
   background-color: var(--clr-dark-gray);
 }
 
