--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -38,7 +38,7 @@
   height: 100%;
   object-fit: cover;
   object-position: top left;
-  transition: transform 500ms ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 
 .details {
@@ -66,29 +66,41 @@
 }
 
 .button {
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.375rem;
   align-self: start;
-  padding: 0.6875em 1.125em;
-  background-color: var(--clr-dark-gray);
   font-size: var(--fs-xs);
-  color: var(--clr-white);
+  text-decoration: none;
+  color: var(--clr-dark-gray);
+  padding: 0.6875em 1.125em;
   margin-top: auto;
-  border: none;
-  border-radius: 0.5em;
+  border: 1px solid var(--clr-dark-gray);
+  border-radius: 50vw;
   cursor: pointer;
   transition:
     background-color 250ms ease,
     color 250ms ease;
 }
 
+.icon {
+  font-size: var(--fs-md);
+  transition: transform 250ms ease-in-out;
+}
+
 @media (hover: hover) and (pointer: fine) {
   .button:hover {
     background-color: var(--clr-dark);
-    color: pink;
+    color: var(--clr-lavender);
+  }
+
+  .button:hover .icon {
+    transform: translateX(3px);
   }
 }
 
 .button:focus {
   background-color: var(--clr-dark);
+  color: var(--clr-lavender);
   outline-offset: 3px;
 }
