--- a/src/components/ProjectInfo/ProjectInfo.module.css
+++ b/src/components/ProjectInfo/ProjectInfo.module.css
@@ -26,29 +26,59 @@
   padding-left: 1.5rem;
 }
 
-.linksList > li + li {
-  margin-top: 0.375rem;
-}
-
 .link {
-  display: inline-block;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
   font-family: var(--ff-text);
   font-weight: var(--fw-light);
   font-size: var(--fs-sm);
   color: var(--clr-darkish-gray);
+  padding: 0.25em;
   text-decoration: none;
   transition: color 250ms ease-in-out;
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  left: 0.25em;
+  right: 0.25em;
+  bottom: 0.4em;
+  height: 0.5px;
+  background-color: currentColor;
+  opacity: 0;
+  transition:
+    opacity 200ms ease-in-out,
+    background-color 250ms ease-in-out;
+}
+
+.icon {
+  margin-left: 0.25em;
+  font-size: var(--fs-xs);
 }
 
 @media (hover: hover) and (pointer: fine) {
   .link:hover {
     color: var(--clr-electric-blue);
   }
+
+  .link:hover::before {
+    opacity: 1;
+  }
 }
 
 .link:active {
   transition: color 100ms ease-in-out;
   color: var(--clr-electric-blue);
+}
+
+.link:active::before {
+  transition:
+    opacity 100ms ease-in-out,
+    background-color 100ms ease-in-out;
+  opacity: 1;
 }
 
 @media screen and (min-width: 48rem) {
