--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -23,39 +23,22 @@
   margin-top: 1.25em;
 }
 
-.button {
+.buttonWrapper {
+  display: inline-flex;
+  margin-top: 1.5rem;
+}
+
+.buttonContent {
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
-  text-decoration: none;
   font-weight: var(--fw-medium);
   font-size: var(--fs-xs);
-  color: var(--clr-dark-gray);
   padding: 0.75em 1em;
-  margin-top: 1.5rem;
-  border: 1px solid var(--clr-dark-gray);
-  border-radius: 50vw;
-  cursor: pointer;
-  transition:
-    background-color 250ms ease,
-    color 250ms ease;
 }
 
-.icon {
+.buttonIcon {
   font-size: var(--fs-md);
-}
-
-@media (hover: hover) and (pointer: fine) {
-  .button:hover {
-    background-color: var(--clr-dark);
-    color: var(--clr-lavender);
-  }
-}
-
-.button:focus {
-  background-color: var(--clr-dark);
-  color: var(--clr-lavender);
-  outline-offset: 3px;
 }
 
 .profileContainer {
@@ -63,7 +46,6 @@
   width: 100%;
   max-width: 30rem;
   margin: 0 auto;
-  color: var(--clr-lavender);
   border-radius: 2rem;
   overflow: hidden;
 }
@@ -74,7 +56,6 @@
   left: 0;
   width: 30%;
   height: auto;
-  color: var(--clr-midnight-blue);
   z-index: var(--z-index-foreground);
 }
 
@@ -88,11 +69,10 @@
 
 .backgroundSVG {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  inset: 0;
   height: 100%;
-  object-fit: cover;
+  width: auto;
+  margin: auto;
   z-index: var(--z-index-default);
 }
 
