--- a/src/components/AudioPlayerButton/AudioPlayerButton.module.css
+++ b/src/components/AudioPlayerButton/AudioPlayerButton.module.css
@@ -10,7 +10,7 @@
   height: 3rem;
   border: none;
   border-radius: 0.25rem;
-  background-color: var(--clr-green);
+  background-color: var(--clr-teal-100);
   cursor: pointer;
   opacity: 0.5;
   transition:
@@ -51,13 +51,13 @@
 
 @keyframes changeBackground {
   0% {
-    background-color: var(--clr-green);
+    background-color: var(--clr-teal-100);
   }
   50% {
     background-color: var(--clr-yellow);
   }
   100% {
-    background-color: var(--clr-turquoise);
+    background-color: var(--clr-teal-300);
   }
 }
 
