--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,12 +2,12 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: var(--clr-white);
+  background-color: var(--clr-neutral-100);
   z-index: var(--z-index-header);
 }
 
 .header.scrolled {
-  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px -2px rgb(0 0 0 / 0.2);
 }
 
 .headerWrapper {
