--- a/src/components/NavMobile/NavMobile.module.css
+++ b/src/components/NavMobile/NavMobile.module.css
@@ -3,7 +3,7 @@
 
   position: fixed;
   flex-direction: column;
-  background-color: var(--clr-dark);
+  background-color: var(--clr-neutral-700);
   gap: 0;
   top: 0;
   height: 100dvh;
@@ -64,7 +64,7 @@
   font-family: var(--ff-headings);
   font-weight: var(--fw-bold);
   font-size: var(--fs-xxl);
-  color: var(--clr-lavender);
+  color: var(--clr-purple-100);
   text-decoration: none;
   opacity: 0.7;
   transition: opacity 250ms ease-in-out;
@@ -85,10 +85,7 @@
 }
 
 .gradientBackground {
-  background-image: radial-gradient(
-    rgba(255, 255, 255, 0.2) 5%,
-    transparent 5%
-  );
+  background-image: radial-gradient(rgb(255 255 255 / 0.2) 5%, transparent 5%);
   background-size: 5rem 5rem;
   background-position: 0 calc(var(--hovered-index) * -15%);
   position: absolute;
@@ -112,7 +109,7 @@
 
 .openButton {
   font-size: clamp(1.5rem, 1.5rem + 1.0416vw, 2rem);
-  color: var(--clr-dark);
+  color: var(--clr-neutral-700);
 }
 
 .closeButton {
@@ -120,7 +117,7 @@
   top: 2rem;
   left: var(--left-spacing);
   font-size: 2.5rem;
-  color: var(--clr-lavender);
+  color: var(--clr-purple-100);
   border-radius: 50%;
   opacity: 0.7;
   z-index: var(--z-index-overlay);
@@ -150,6 +147,14 @@
   .closeButton:hover::before {
     border-color: currentColor;
   }
+}
+
+.openButton:active {
+  transition:
+    opacity 100ms ease-in-out,
+    transform 150ms ease-in-out;
+  color: var(--clr-neutral-400);
+  transform: scale(0.95);
 }
 
 .closeButton:active {
