--- a/src/components/SectionHeader/SectionHeader.module.css
+++ b/src/components/SectionHeader/SectionHeader.module.css
@@ -11,11 +11,11 @@
   font-weight: var(--fw-bold);
   font-size: var(--fs-xxl);
   line-height: 1.1;
-  color: var(--clr-midnight-blue);
+  color: var(--clr-blue-200);
 }
 
 .heading.dark {
-  color: var(--clr-lavender);
+  color: var(--clr-purple-100);
 }
 
 .subheading {
@@ -23,11 +23,11 @@
   font-weight: var(--fw-semi-bold);
   font-size: var(--fs-lg);
   letter-spacing: 2px;
-  color: var(--clr-turquoise);
+  color: var(--clr-teal-300);
 }
 
 .star {
   --height: calc(var(--fs-hero) * 0.75);
   --width: calc(var(--fs-hero) * 0.65);
-  --fill: var(--clr-lavender);
+  --fill: var(--clr-purple-100);
 }
