--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -4,14 +4,14 @@
 }
 
 .tooltip {
-  --color: var(--clr-dark);
+  --color: var(--clr-neutral-700);
 
   position: absolute;
   bottom: 50%;
   left: 50%;
   transform: translateX(-50%);
   font-size: var(--fs-xs);
-  color: var(--clr-white);
+  color: var(--clr-neutral-100);
   padding: 0.5rem;
   background-color: var(--color);
   border-radius: 0.5rem;
@@ -47,7 +47,7 @@
   font-family: var(--ff-text);
   font-weight: var(--fw-light);
   font-size: var(--fs-xxs);
-  color: var(--clr-green);
+  color: var(--clr-teal-100);
 }
 
 .circle {
